# AgentLedger

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  __init__.py  agentledger.db  docker-compose.yml  pyproject.toml  render.py  tracer.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
agentledger/: CLAUDE.md  __init__.py  anthropic_patch.py  openai_patch.py  render.py
agentledger/proxy/: __main__.py  alerts.py  app.py  auth.py  dashboard.py  export.py  mcp.py  normalize.py  otel.py  pricing.py  ratelimit.py  redact.py  store.py  stream.py
tests/: conftest.py  test_alerts.py  test_async_capture.py  test_audit.py  test_export.py  test_hardening.py  test_ingest_auth.py  test_mcp.py  test_normalize.py  test_observability.py  test_pricing.py  test_proxy.py  test_ratelimit.py  test_redact.py  test_retention.py  test_smoke.py  test_store.py  test_store_postgres.py  test_stream.py  test_token_auth.py
