[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentledger"
version = "0.1.0"
description = "See what your AI agent actually did."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Shekhar Bhardwaj" }
]
keywords = [
    "ai",
    "agents",
    "llm",
    "debugging",
    "tracing",
    "observability",
    "openai",
    "anthropic",
    "langchain",
    "crewai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "openai>=1.0",
    "anthropic>=0.18",
    "aiosqlite>=0.19",
]

[project.urls]
Homepage = "https://github.com/ShekharBhardwaj/AgentLedger"
Repository = "https://github.com/ShekharBhardwaj/AgentLedger"
Issues = "https://github.com/ShekharBhardwaj/AgentLedger/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentledger"]

[tool.hatch.build.targets.sdist]
include = [
    "/agentledger",
    "/README.md",
    "/LICENSE",
]
