[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "agentic-ledger"
dynamic = ["version"]
description = "Runtime observability for AI agents — see exactly what your agent did, why it did it, and what it cost."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Shekhar Bhardwaj" }
]
keywords = [
    "ai", "agents", "llm", "observability", "debugging", "tracing",
    "openai", "anthropic", "langchain", "crewai", "audit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29",
]
otel = [
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "openai>=1.0",
    "anthropic>=0.18",
    "aiosqlite>=0.19",
    "hatch-vcs",
]

[project.urls]
Homepage   = "https://github.com/ShekharBhardwaj/AgentLedger"
Repository = "https://github.com/ShekharBhardwaj/AgentLedger"
Issues     = "https://github.com/ShekharBhardwaj/AgentLedger/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["agentledger"]
artifacts = ["agentledger/proxy/mascot.jpg"]

[tool.hatch.build.targets.sdist]
include = [
    "/agentledger",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
