[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "agentic-ledger"
dynamic = ["version"]
description = "Runtime observability for AI agents — see exactly what your agent did, why it did it, and what it cost."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Shekhar Bhardwaj" }
]
keywords = [
    "ai", "agents", "llm", "observability", "debugging", "tracing",
    "openai", "anthropic", "langchain", "crewai", "audit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29",
]
otel = [
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "openai>=1.0",
    "anthropic>=0.18",
    "aiosqlite>=0.19",
    "hatch-vcs",
]

[project.urls]
Homepage   = "https://github.com/ShekharBhardwaj/AgentLedger"
Repository = "https://github.com/ShekharBhardwaj/AgentLedger"
Issues     = "https://github.com/ShekharBhardwaj/AgentLedger/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["agentledger"]
artifacts = ["agentledger/proxy/mascot.jpg"]

[tool.hatch.build.targets.sdist]
include = [
    "/agentledger",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["agentledger"]
omit = ["agentledger/proxy/dashboard.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Curated set: real-bug rules (pyflakes/bugbear) + import hygiene + simple cleanups.
# E501 (line length) is left to judgment — the dashboard/report modules embed long
# HTML/format strings. The Optional[X] -> X | None rewrites (UP045/UP007) are skipped
# to avoid churning the codebase's existing typing style.
select = ["E", "F", "W", "I", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests favor readability over import-at-top and may shadow builtins in fixtures.
"tests/*" = ["E402", "B008"]
